# tvastar

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  Projetc-structure.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent.yml  ci.yml  publish.yml
.kiro/agents/: Glossary .md  designer-ui.md  designer-ux.md  engineer-ai.md  engineer-backend.md  engineer-frontend.md  engineer-infra.md  engineer-integrations.md  engineer-voice.md  pm-lead.md  pm-requirements-challenger.md  property-examples.md  qa-engineer.md  requirements-red-team.md  tech-writer.md  writing-great-skills.md
.kiro/skills/: ponytail-audit.md  ponytail-debt.md  ponytail-help.md  ponytail-review.md
.kiro/steering/: agents.md  graphify.md  ponytail.md  skills-index.md
action/: action.yml
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/adapters/crm/: generic_webhook.py  salesforce.py
backend/adapters/email/: smtp.py
backend/adapters/livekit/: dialer.py  transfer.py
backend/adapters/nats/: consumers.py  publisher.py
backend/adapters/postgres/: models.py  repos.py  session.py  vectors.py
backend/adapters/s3/: storage.py
backend/adapters/temporal/: activities.py  workflows.py
backend/adapters/valkey/: cache.py  locks.py  rate_limiter.py
backend/adapters/whatsapp/: cloud_api.py  webhooks.py
backend/alembic/: env.py
backend/api/: app.py  deps.py
backend/api/middleware/: audit.py  auth.py  rate_limit.py  tenant.py
backend/api/routes/: auth.py  billing.py  calls.py  crm_webhook.py  knowledge.py  leads.py  notifications.py  projects.py  site_visits.py  tenants.py  users.py  whatsapp.py
backend/core/: errors.py  events.py  models.py  types.py
backend/core/billing/: compute.py
backend/core/call/: cooling_off.py  priority.py  window.py
backend/core/consent/: gate.py  keywords.py
backend/core/lead/: assignment.py  scoring.py  state_machine.py
backend/core/retry/: backoff.py
backend/ports/: cache.py  crm.py  knowledge.py  notifications.py  storage.py  telephony.py  whatsapp.py
backend/tests/: conftest.py
backend/tests/integration/: test_tenant_isolation.py
backend/tests/properties/: test_consent_gate.py  test_state_machine.py
backend/voice_agent/: agent.py  handlers.py  persona.py  rag.py
backend/workers/: worker.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BENCHMARKS.md  COOKBOOK.md  FUTURE_ANALYSIS.md  FUTURE_WORK.md  GETTING_STARTED.md  PATTERNS.md  PM_ONBOARDING.md  PRODUCT_ASSESSMENT.md  RELIABILITY_REVIEW.md  ROADMAP.md  USAGE.md  error-handling.md  failure-modes.md  fleet.md  slo.md  threat-model.md  twelve-factor-agents.md
docs/adr/: 0001-zero-deps-core.md  0002-lazy-fleet-imports.md  0003-dataclass-over-pydantic.md  0004-security-violation-migration.md
docs/migration/: exception-hierarchy.md
docs/runbooks/: budget-exhausted.md  circuit-breaker-open.md  cost_spike.md  error_rate.md  handoff-triggered.md  model-rate-limited.md  quality_degradation.md  store-unreachable.md
examples/: README.md  README_EXAMPLES.md  coding_agent.py  compliance_audit_agent.py  custom_provider.py  demo_fix.py  demo_ui.py  detect_silent_failure.py  incident_responder.py  mcp_agent.py  mcp_echo_server.py  outbound_campaign.py  pipeline_generator.py  proof_groq.py  quickstart.py  security_remediation_agent.py  self_healing_agent.py
examples/agent_debugger/: __init__.py  __main__.py  agents.py  approval.py  compaction.py  detectors.py  fleet_demo.py  governance.py  mcp_integration.py  mock_responses.py  model_selection.py  report.py  sanitize.py  schemas.py  self_detect.py  trajectory.py  workflow.py
examples/deploy/: Dockerfile  fix-tests-workflow.yml  github_action_entry.py
examples/skills/: code-reviewer.md
frontend/: package.json
helpers_docs/: AUDIT_REPORT.md  CHARACTER_RESEARCH.md  tasks.md
paper/: philosophy-ai.md  reading-list.md  research-v2.md  research.md
scripts/: check_mypy_ratchet.py  honest_benchmark.py  quality_gate.py  test_groq.py
spec/: README.md  events.schema.json  generate_schema.py
src/tvastar/: __init__.py  agent.py  approval.py  boundary.py  compaction.py  compaction_policy.py  compliance.py  compressor.py  cost.py  degraded.py  dispatch.py  durable.py  errors.py  eval.py  event_exporter.py  graph.py  harness.py  logging.py  masking.py  observability.py  permissions.py  profiles.py  quality.py  reflection.py  rocs.py  router.py  session.py  topology.py  types.py  workflow.py  wrap.py
tests/: test_adapt_trajectory.py  test_adapters.py  test_agent_loop.py  test_agent_pruner.py  test_approval_unit.py  test_assurance.py  test_audit_compliance.py  test_auto_topology.py  test_bench.py  test_boundary.py  test_child_detect.py  test_ci.py  test_circuit_breaker.py  test_compaction.py  test_compaction_engine.py  test_compaction_stages.py  test_compliance.py  test_compressor.py  test_concurrency_degraded.py  test_contradiction.py  test_contrib_ltm.py  test_cost_budget_unit.py  test_credential_filter.py  test_dashboard.py  test_dataclass_validation.py  test_degraded_failfast.py  test_deploy.py  test_deprecation_warning.py  test_detect.py  test_detect_from_messages.py  test_dispatch_cleanup.py  test_dspy_optimizer.py  test_edge_cases.py  test_email_handoff.py  test_error_details.py  test_event_exporter.py  test_fallback_chain.py  test_fix.py  test_github_handoff.py  test_governance_unit.py  (+90 more)
tests/conversation/: test_backward_compat.py  test_compaction.py  test_crash_recovery.py  test_durable_properties.py  test_durable_properties_2.py  test_interrupted_tools.py  test_list_sessions.py  test_records.py  test_reducer.py  test_session_identity.py  test_session_writer.py  test_writer.py  (+1 more)
tvastar/: __init__.py  agent.py  approval.py  boundary.py  compaction.py  cost.py  dispatch.py  durable.py  errors.py  eval.py  graph.py  harness.py  masking.py  observability.py  profiles.py  session.py  workflow.py
(+302 files in other folders)
